@@ -1525,3 +1525,6 @@
 20070202 TAG: Release-0_8_0-pre1 (Release-0_8_0-branch)
 20070204 sound.c: don't disable sound completely if we don't enable sound
          after an unpause (fixes bug #1648246) (Fred).
+20070204 rzx.c: use new libspectrum_rzx_playback_frame() API to allow
+	 loading of snapshots (necessary for playing back RZX files made with
+	 SPIN's "RZX Pause" feature).
